--- a/src/pages/signin/SignIn.css
+++ b/src/pages/signin/SignIn.css
@@ -29,9 +29,8 @@
 }
 
 .input {
-    width: 400px;
-    outline: none;
-    padding: 10px 15px;
+  width: 430px;
+  margin: auto;
 }
 
 .footer {
@@ -82,7 +81,6 @@
   background-color: black;
 }
 
-
 .loginButton{
   width: 370px;
   padding: 15px 25px;
@@ -100,4 +98,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.navigationLink {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  margin: auto;
+}
+
+.linkNav {
+  font-size: 15;
+  font-weight: 700;
+  text-decoration: none;
+  margin-left: 10px;
 }
