--- a/src/pages/signin/SignIn.css
+++ b/src/pages/signin/SignIn.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
  height: 60%;
  min-height: 60vh;
  align-self: center;
@@ -9,9 +9,9 @@
  margin-left: auto;
  margin-right: auto;
  width: 100%;
-}
+} */
 
-.innerBox {
+/* .innerBox {
   min-width: 480px;
   height: fit-content;
   width: fit-content;
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-}
+} */
 
 .heading {
   font-size: 25px;
@@ -77,15 +77,12 @@
 .facebook{
   background-color: #507cc0;
 }
-.github{
-  background-color: black;
-}
 
 .loginButton{
-  width: 370px;
+  /* width: 370px; */
   padding: 15px 25px;
   border-radius: 5px;
-  color: white;
+  /* color: white; */
   display: flex;
   align-items: center;
   font-weight: bold;
