Admin and Signin Page

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -15,10 +15,12 @@
 
     .search {
       display: flex;
-      align-items: center;
+      align-items: stretch;
+      justify-content:space-between;
       border: 0.5px solid lightgray;
+      border-radius: 50px;
       padding: 3px;
-
+      width: 20vw;
       input {
         border: none;
         outline: none;
