--- a/src/pages/signin/SignIn.css
+++ b/src/pages/signin/SignIn.css
@@ -78,6 +78,15 @@ section .form_data{
   position: relative;
 }
 
+.form_input .one{
+  display: flex;
+  flex-direction: column;
+}
+
+.email {
+  margin-right: 170px;
+}
+
 .form_data form .form_input input:focus{
   border:2px solid rgba(66, 153, 225,0.6);
 }
