--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -5,16 +5,16 @@ section{
     min-height:calc(100vh - 80px);
 }
 
-section .form_data{
-    max-width: 550px;
+section .form{
+    width: 60%;
     margin: 25px auto;
     padding: 35px 10px;
     box-shadow: 0 0 15px -10px #2d3748;
     border-radius: 10px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    justify-content: space-evenly;
+    flex-direction: 'row';
+} 
 
 .form_heading{
     display: flex;
@@ -22,58 +22,56 @@ section .form_data{
     align-items: center;
 }
 
-.form_data h1{
+.form h1{
     font-size: 34px;
     color: #2a4365;
 }
 
-.form_data p{
+.form p{
     color: #718096;
     font-size: 15px;
     margin-top:9px;
 }
 
-.form_data form{
+.form form{
     margin-top: 45px;
-    width: 100%;
+    width: 80%;
     padding: 10px 50px;
 }
 
-.form_data form .form_input input{
-    width: 95%;
+.form form input{
+    width: 30vw;
     padding: 11px;
     border: 1px solid #d4d0d0;
     border-radius: 5px;
     outline: none;
     margin-bottom: 14px;
     margin-top: 9px;
-    font-size: 14px;
-    
+    font-size: 14px;    
 }
 
-.form_data form .form_input label{
+.form form .form label{
     font-weight: 600;
     font-size: 15px;
 }
 
-.form_input .two{
+.form .two{
     display: flex;
     align-items: center;
     position: relative;
 }
 
-.form_data form .form_input input:focus{
+.form form .form input:focus{
     border:2px solid rgba(66, 153, 225,0.6);
 }
 
-
-.form_data form .form_input input::placeholder{
+.form form .form input::placeholder{
     color: #8694a8;
     letter-spacing: .5px;
     font-size: 14px;
 }
 
-.form_input .showpass{
+.form .showpass{
     position: absolute;
     right: 0;
     top:1px;
@@ -90,7 +88,7 @@ section .form_data{
 
 form .btn{
     display:block;
-    width: 100%;
+    width: 90%;
     padding: 15px;
     border: none;
     outline: none;
@@ -104,17 +102,24 @@ form .btn{
     transition: all .3s;
 }
 
+.left {
+ display: flex;
+ flex-direction: column;
+ width: 40vw;
+ justify-content: center;
+ align-items: center;
+}
 
 form .btn:hover{
     background-color: #97a1b1;
 }
 
-.form_data form p{
+.form form p{
     text-align: center;
     margin-top: 20px;
 }
 
-.form_data form a{
+.form form a{
     text-decoration: none;
     color:#718096 ;
     border-bottom: 2px solid #8694a8;
@@ -132,7 +137,7 @@ form .btn:hover{
   }
   
   .loginButton{
-    width: 500px;
+    width: 300px;
     padding: 15px 25px;
     border-radius: 5px;
     color: white;
