Admin Sign Up Page

--- a/src/components/accordion/Accordion.scss
+++ b/src/components/accordion/Accordion.scss
@@ -10,12 +10,14 @@
   }
   
   .accordion_item {
-    border-top: 1px solid #9f9f9f;
+    border-top: 1px solid #353535;
+    
+    margin-left: -28px;
   }
   
   .button {
     font-size: 16px;
-    background-color: #008593;
+    background-color: #414141;
     color: #fff;
     text-align: left;
     font-weight: 700;
