--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -2,7 +2,9 @@
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
-  background-color: white;
+  background-color: #888;
+  margin-top: -8px;
+  margin-left: -10px;
 
   .top {
     height: 50px;
@@ -13,7 +15,7 @@
     .logo {
       font-size: 20px;
       font-weight: bold;
-      color: #6439ff;
+      color: #fdfdfd;
     }
   }
 
@@ -33,7 +35,7 @@
       .title {
         font-size: 10px;
         font-weight: bold;
-        color: #999;
+        color: #fdfdfd;
         margin-top: 15px;
         margin-bottom: 5px;
       }
@@ -50,13 +52,13 @@
 
         .icon {
           font-size: 18px;
-          color: #7451f8;
+          color: #fdfdfd;
         }
 
         span{
             font-size: 13px;
             font-weight: 600;
-            color: #888;
+            color: #fdfdfd;
             margin-left: 10px;
         }
       }
@@ -72,7 +74,7 @@
           width: 20px;
           height: 20px;
           border-radius: 5px;
-          border: 1px solid #7451f8;
+          border: 1px solid #fdfdfd;
           cursor: pointer;
           margin: 5px;
 
@@ -83,7 +85,7 @@
               background-color: #333;
           }
           &:nth-child(3){
-              background-color: darkblue;
+              background-color: #fdfdfd;
           }
       }
   }
