--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -147,3 +147,43 @@ form .btn:hover{
     margin-bottom: 20px;
     cursor: pointer;
   }
+  .container {
+    display: "flex";
+    flex-direction: "row";
+    justify-content: "center";
+    align-items: "center";
+    padding-top: 50;
+  }
+   
+  .preview {
+    margin-top: 50;
+    display: "flex";
+    flex-direction: "row";
+  }
+
+  form .img_input{
+    display:block;
+    width: 70%;
+    padding: 15px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color:#1a365d;
+    color: #fff;
+    font-weight: 600;
+    font-size: 18px;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+
+  .image { max-width:50px, ; max-height: 50px; border-radius: 50px };
+  
+  .delete {
+    cursor: "pointer";
+    padding: 15;
+    background: "rgb(30, 117, 146)";
+    color: "white";
+    border: "none";
+  } 
