--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,15 +4,21 @@
   .homeContainer {
     flex: 6;
 
-    .widgets,
+    .widgets {
+      display: flex;
+      flex-direction: row;
+    }
     .charts {
+      margin-top: 30px;
       display: flex;
       padding: 20px;
       gap: 20px;
+      width: 80vw;
     }
 
     .charts {
       padding: 5px 20px;
+      width: 70vw;
     }
 
     .listContainer {
@@ -20,6 +26,7 @@
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 20px;
       margin: 20px;
+      width: 60vw;
 
       .listTitle {
         font-weight: 500;
