--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
   width: 400px;
-  background-color: #888;
+  background-color: #3a3939;
   margin-top: -8px;
   margin-left: -10px;
 
@@ -34,9 +34,9 @@
       padding: 0;
 
       .title {
-        font-size: 10px;
+        font-size: 15px;
         font-weight: bold;
-        color: #fdfdfd;
+        color: #f0ebeb;
         margin-top: 15px;
         margin-bottom: 5px;
       }
@@ -57,9 +57,9 @@
         }
 
         span{
-            font-size: 13px;
+            font-size: 16px;
             font-weight: 600;
-            color: #fdfdfd;
+            color: #f0ebeb;
             margin-left: 10px;
         }
       }
