--- a/src/pages/admin/AdminPage.scss
+++ b/src/pages/admin/AdminPage.scss
@@ -3,5 +3,9 @@
     width: 100%;
     .listContainer {
       flex: 6;
+      .widgets {
+        display: flex;
+        flex-direction: row;
+      }
     }
 }
