--- a/src/pages/admin/AdminPage.scss
+++ b/src/pages/admin/AdminPage.scss
@@ -7,5 +7,16 @@
         display: flex;
         flex-direction: row;
       }
+      .users-data {
+        width: 1500px;
+        height: 1000px;
+        background-color: rgb(255, 252, 252);
+        color:rgb(0, 0, 0);
+        box-sizing:border-box;
+        margin: 25px 45px;
+        display: flex;
+        flex-direction: column;
+      }
     }
+
 }
