--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,26 +1,32 @@
 .navbar {
-  height: 50px;
-  border-bottom: 0.5px solid rgb(231, 228, 228);
+  // height: 50px;
+  // border-bottom: 0.5px solid rgb(231, 228, 228);
   display: flex;
-  align-items: center;
+  // align-items: center;
+  flex-direction: row;
   font-size: 14px;
   color: #555;
+  margin-top: -7px;
 
   .wrapper {
     width: 100%;
-    padding: 20px;
+    height: 60px;
+    margin-top: auto;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    // align-items: center;
     justify-content: space-between;
 
     .search {
       display: flex;
       align-items: stretch;
       justify-content:space-between;
+      margin-top: 5px;
       border: 0.5px solid lightgray;
       border-radius: 50px;
       padding: 3px;
       width: 20vw;
+      height: 30px;
       input {
         border: none;
         outline: none;
